# Web-Isolator

./: .gitignore  README.md
local-dev-forge/: .env.example  README.md  SERVER_INTEGRATION.md  index.html  package.json  tailwind.config.ts
local-dev-forge/src/: index.css
local-dev-forge/src/components/: Dashboard.tsx  Header.tsx  LogViewer.tsx  ProjectCreateModal.tsx  Sidebar.tsx  WorkspaceManager.tsx
local-dev-forge/src/components/ui/: status-badge.tsx
local-dev-forge/src/hooks/: useProject.ts  useWebSocket.ts
local-dev-forge/src/lib/: apiClient.ts
local-dev-forge/src/pages/: Index.tsx
local-dev-forge/src/services/: projectService.ts  workspaceService.ts
local-dev-forge/src/types/: project.ts  workspace.ts
web-isolator/: README.md  pyproject.toml
web-isolator/agile-methodology/: README.md  sprint-planning.md  task-master-ai.md  user-stories.md
web-isolator/cli/: __init__.py  main.py
web-isolator/cli/api/: __init__.py  server.py
web-isolator/cli/commands/: init.py  init_v2.py  network.py  stop.py  up.py  workspace.py
web-isolator/cli/core/: __init__.py  config.py  database.py  encryption.py  workspace_manager.py  workspace_schema.py
web-isolator/cli/providers/: __init__.py  base.py  docker_provider.py  factory.py
web-isolator/cli/utils/: exceptions.py  network_manager.py  validators.py
web-isolator/docs/: cli-reference.md  getting-started.md
web-isolator/nginx/: Dockerfile  default.conf  nginx.conf
web-isolator/nginx/conf.d/projects/: README.md
web-isolator/tasks/: README.md
web-isolator/tasks/sprint-1/us-001-docker-network/: README.md  tasks.md
web-isolator/tasks/sprint-1/us-002-cli-structure/: README.md  tasks.md
web-isolator/tasks/sprint-1/us-003-react-template/: README.md
web-isolator/tasks/sprint-1/us-004-fastapi-template/: README.md
web-isolator/templates/fastapi/: Dockerfile  Dockerfile.dev  README.md  requirements.txt
web-isolator/templates/fastapi/app/: main.py
web-isolator/templates/fastapi/app/api/api_v1/: api.py
web-isolator/templates/fastapi/app/api/api_v1/endpoints/: health.py  items.py
web-isolator/templates/fastapi/app/core/: config.py
web-isolator/templates/react-next/: Dockerfile  Dockerfile.dev  next.config.js  package.json
web-isolator/templates/react-next/src/app/: layout.tsx  page.tsx
